--- a/_posts/2017-10-26-AtomFeed.md
+++ b/_posts/2017-10-26-AtomFeed.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: testing feed
+title: Testing feeds
 ---
 Due to a request from a friend, I have managed a way to create a RSS feed (or in this case) a Atom feed to allow my blog viewers to follow new posts!
 
