--- a/_posts/2017-12-18-VimTip.md
+++ b/_posts/2017-12-18-VimTip.md
@@ -4,10 +4,11 @@ title: Quick vim tip
 ---
 Who never opened a file with vim and then realized that you need to write but you forgot root?
 
-Easy fix:
-`sudo vim ~/.vimrc
-command W :execute ':silent w !sudo tee % > /dev/null' | :edit!
-`
+###Easy fix:
+`sudo vim ~/.vimrc`
+add the following line
+
+`command W :execute ':silent w !sudo tee % > /dev/null' | :edit!`
 
 With this we only need to save the file like ":W"
 
